# Allegro-Hand-Controller-DIME

./: .gitignore  README.md
src/allegro_hand/: CMakeLists.txt  package.xml  setup.py
src/allegro_hand/launch/: allegro_hand.launch
src/allegro_hand/scripts/: allegro_env.py  allegro_logger.py  allegro_poser.py  allegro_poses.py  allegro_torque_env.py  hand_position_listener.py  logger.py  poser.py
src/allegro_hand/src/allegro_hand/: controller.py  utils.py
src/allegro_hand/src/allegro_robot/: allegro_hand_control.py
src/allegro_hand_controllers/: CMakeLists.txt  package.xml
src/allegro_hand_controllers/launch/: allegro_hand.launch  visualizer.launch
src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_pd.cpp  allegro_node_pd.h  kdl_controller.cpp  kdl_controller.h
src/ll4ma_kdl/: CMakeLists.txt  LICENSE  README.org  README.txt  package.xml
src/ll4ma_kdl/docs/: Doxyfile  mainpage.md
src/ll4ma_kdl/include/ll4ma_kdl/: debug.h
src/ll4ma_kdl/include/ll4ma_kdl/manipulator_kdl/: chainjnttojacdotsolver.hpp  robot_kdl.h  robot_kdl_bck.h
src/ll4ma_kdl/include/ll4ma_kdl/utils/: transforms.h
src/ll4ma_kdl/launch/: allegro_ik.launch  kdl_test.launch  lbr4_solver.launch
src/ll4ma_kdl/msg/: IK_command.msg
src/ll4ma_kdl/scripts/: handArmModel.py  handModel.py  kdl_allegro_model.py  kdl_lbr4_allegro_model.py  kdl_lbr4_model.py  manipulator_model.py  test_hand_model.py  test_kdl.py
src/ll4ma_kdl/src/: benchmark_kdl.cpp  dart_dynamics_negation.cpp  dart_kdl_test.cpp  dart_test_node.cpp  kdl_test_node.cpp
src/ll4ma_kdl/src/manipulator_kdl/: chainjnttojacdotsolver.cpp  robot_kdl.cpp  robot_kdl_bck.cpp
src/ll4ma_kdl/src/old_src/: allegro_ik_demo.cpp  allegro_trac_generic.cpp  allegro_trac_ik.cpp  lbr4_trac_ik.cpp
src/ll4ma_kdl/src/utils/: transforms.cpp
src/ll4ma_robots_description/: CMakeLists.txt  README.md  package.xml
src/ll4ma_robots_description/config/: baxter.rviz  omni.rviz  panda.rviz  robot.rviz  test_urdf.rviz
src/ll4ma_robots_description/launch/: baxter_fragment.launch  baxter_rviz.launch  lbr4_rviz.launch  load_virtual_allegro.launch  omni_rviz.launch  optoforce_rviz.launch  panda_rviz.launch  test_urdf.launch
src/ll4ma_robots_description/meshes/allegro/: PALM_BACK_COVER_D.stl  base_link_biotac.stl  base_link_cvx.stl
src/ll4ma_robots_description/meshes/allegro/collision/: base_link_biotac.stl  link_0.0.stl  link_1.0.stl  link_12.0_right.stl  link_13.0.stl  link_14.0.stl  link_15.0.stl  link_2.0.stl  link_3.0.stl  link_3.0_tip.stl  link_4.0.stl
src/ll4ma_robots_description/meshes/allegro/convex_hull/: base_link_biotac.stl  index_link_1.ply  index_link_2.ply  index_tip.ply  palm_link.ply  thumb_link_2.ply  thumb_link_3.ply  thumb_tip.ply
src/ll4ma_robots_description/meshes/biotac/: base_collision.stl  base_visual.stl  biotac_contact.stl  biotac_hacked.stl  biotac_sensor.stl  biotac_sensor_full.stl  biotac_v1.stl  biotac_v2.stl  contact_collision.stl  contact_collision_small.stl  contact_visual.stl  nail_collision.stl  nail_visual.stl
src/ll4ma_robots_description/meshes/end_effectors/: push_stick.STL  sysid_obj.stl
src/ll4ma_robots_description/meshes/environment/: bowl.stl
src/ll4ma_robots_description/meshes/lbr4/: base.stl
src/ll4ma_robots_description/meshes/lbr4/collision/: base.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl
src/ll4ma_robots_description/meshes/lbr4/convex_hull/: link_0.ply  link_1.ply  link_2.ply  link_3.ply  link_4.ply  link_5.ply  (+2 more)
src/ll4ma_robots_description/meshes/mounts/: biotac_mount.stl
src/ll4ma_robots_description/meshes/phantom_omni/: base.stl  pen.stl  torso.stl
src/ll4ma_robots_description/meshes/reflex/: base_link_coll.stl  distal.stl  distal_coll.stl  distal_pad.stl  distal_pad_coll.stl  pad_coll.stl  proximal.stl  proximal_coll.stl  proximal_pad.stl  proximal_pad_coll.stl  swivel_1_coll.stl
src/ll4ma_robots_description/robots/: allegro.robot.xacro  allegro_virtual.robot.xacro  baxter.robot.xacro  kuka-allegro-biotac.urdf  lbr4.robot.xacro  lbr4_allegro_right.urdf  optoforce.robot.xacro  panda.robot.xacro
src/ll4ma_robots_description/scripts/: mesh_converter.py
src/ll4ma_robots_description/urdf/allegro_right/: allegro.gazebo.xacro  allegro.transmission.xacro  allegro.urdf.xacro  allegro_base.urdf.xacro  allegro_biotac.urdf.xacro  allegro_control.urdf.xacro  allegro_hand_description_right.urdf  allegro_kdl.urdf  allegro_kdl_b.urdf  allegro_kdl_c.urdf  biotac_tips.urdf.xacro  finger_tip.urdf  finger_tip.urdf.xacro  foam_tips.urdf.xacro
src/ll4ma_robots_description/urdf/baxter/: baxter.gazebo.xacro  baxter.urdf.xacro  baxter_left_gripper.xacro  baxter_right_gripper.xacro
src/ll4ma_robots_description/urdf/biotac/: b2.urdf.xacro  biotac.gazebo.xacro  biotac.urdf.xacro
src/ll4ma_robots_description/urdf/cameras/: asus_xtion.gazebo.xacro  asus_xtion.urdf.xacro
src/ll4ma_robots_description/urdf/end_effectors/: biotac_mount.urdf.xacro  cube.urdf.xacro  push_stick.urdf.xacro  rigid_obj.urdf.xacro  sphere.urdf.xacro
src/ll4ma_robots_description/urdf/environment/: basket.urdf.xacro  bowl.urdf.xacro  object_table.urdf.xacro  robot_table.urdf.xacro  table.urdf.xacro
src/ll4ma_robots_description/urdf/force_sensors/: ati_sensor.urdf.xacro  optoforce_sensor.gazebo.xacro  optoforce_sensor.urdf.xacro
src/ll4ma_robots_description/urdf/lbr4/: lbr4.gazebo.xacro  lbr4.materials.xacro  lbr4.transmission.xacro  lbr4.urdf.xacro  lbr4_base.urdf.xacro  lbr4_calibration.urdf  lbr4_kdl.urdf
src/ll4ma_robots_description/urdf/mounts/: baxter_optoforce_mount.urdf.xacro  baxter_push_stick_mount.urdf.xacro  baxter_reflex_mount.urdf.xacro  lbr4_mount.urdf.xacro  lbr4_reflex_mount.urdf.xacro  optoforce_push_stick_mount.urdf.xacro
src/ll4ma_robots_description/urdf/panda/: panda.urdf.xacro
src/ll4ma_robots_description/urdf/phantom_omni/: omni.urdf.xacro
src/ll4ma_robots_description/urdf/reflex/: reflex.gazebo.xacro  reflex.transmission.xacro  reflex.urdf.xacro
src/ll4ma_robots_description/urdf/xacro_macros/: inertia_tensors.xacro
(+33 files in other folders)
